--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,19 @@
   <body>
     <load ="partials/header.html" />
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+
+    <form class="form">
+      <div class="">
+        <input type="text" class="search-input" name="searchKeyword" />
+      </div>
+      <button type="submit" class="submit-btn">Search</button>
+    </form>
+    <ul class="gallery"></ul>
+
+    <button type="button" class="photo-btn is-hidden-btn">Load more</button>
+
+   <span class="loader is-hidden"></span>
+    <script src="./main.js" defer type="module"></script>
 
     <!-- Loads the specified .html file -->
     <load ="partials/vite-promo.html" />
